Add empty view to test template works

--- a/src/i18n/da-DK.json
+++ b/src/i18n/da-DK.json
@@ -2,6 +2,9 @@
     "view": {
         "home": {
             "title": "Hjem"
+        },
+        "empty": {
+            "title": "Tom test side"
         }
     }
 }
