Setup responsive editor layout

--- a/src/i18n/da-DK.json
+++ b/src/i18n/da-DK.json
@@ -5,6 +5,9 @@
         },
         "empty": {
             "title": "Tom test side"
+        },
+        "templateEditor": {
+            "title": "Skabelon"
         }
     }
 }
